# ChangeLog for sci-libs/openfoam-bin
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  04 Aug 2008; Oliver Borm (boroli) <oli.borm@web.de>
  openfoam-bin-1.4.1_p20080118.ebuild, openfoam-bin-1.5.ebuild:
  Changed version dependencies

  26 Jul 2008; Thomas Anderson <gentoofan23@gentoo.org>
  openfoam-bin-1.5.ebuild:
  Fix unnecessary quoting

  22 Jul 2008; Oliver Borm (boroli) <oli.borm@web.de>
  +openfoam-bin-1.5.ebuild, +files/OpenFOAM-1.5-compile.patch:
  Version bump to 1.5 for bug 104257

  27 Mar 2008; Markus Ullmann <jokey@gentoo.org>
  -openfoam-bin-1.4.1_p20080118.patch:
  Move patch to dev.ge.org

  29 Jan 2008; Oliver Borm (boroli) <oli.borm@web.de>
  openfoam-bin-1.4.1_p20080118.ebuild:
  Updated dependencies

  18 Jan 2008; Oliver Borm (boroli) <oli.borm@web.de>
  +files/openfoam-bin-1.4.1_p20080118.patch, +files/compile-1.4.1.patch,
  +metadata.xml, +openfoam-bin-1.4.1_p20080118.ebuild:
  New ebuild for the binary version of OpenFOAM from bug 104257
