@@ -9,5 +9,5 @@ DIST OpenFOAM-1.5.linuxGccDPOpt.gtgz 35208751 RMD160 44d0ffabc250275e3a039484047
 DIST openfoam-bin-1.4.1_p20080118.patch.bz2 136972 RMD160 cf82b9c9973072b8f7319da7b87ad7bf1ff8bcd4 SHA1 3421850559d6d27d747f7c1bd2dbcd1603c4212a SHA256 f87c89d780ec4d74bed451aca855b67633ec971ad8a40782e849d0dc8190b50b
 EBUILD openfoam-bin-1.4.1_p20080118.ebuild 8339 RMD160 a6f01c82835e3fda6a2fe788d32462e90afe6c93 SHA1 c230a891973fb5e24fe88c1188dcc6e5c749b36c SHA256 c9ddc9f4a9ee6b002cb9fe243fae8faba782b48ff5141ff04baa4ed84208b960
 EBUILD openfoam-bin-1.5.ebuild 3310 RMD160 586b8cf93c2a60c3cd7a82557242c12358aee384 SHA1 1ebabbe642a4270b7827dadc288f3835aacdc9e9 SHA256 9c5809ffe50f395fe84745a7f35c3c70d9fc6223f86ff6158f7b61aa0d329b9a
-MISC ChangeLog 1017 RMD160 51900f315879faf8e15bcf68ed831c7bda18d0a5 SHA1 c777a3280b0e3ef1a0d5a3fe5beec8e3e2b83d4a SHA256 991a9a6347cf26793751a96772dcc2ef9ce5dcb5a31fe99dc2eb33833e32a7fe
-MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
+MISC ChangeLog 1138 RMD160 eb9a8825ca67ecca76ad570d11682efc3456d740 SHA1 e0d663fac93d47ec71352956bfd95c84d264f3e8 SHA256 37938aa173705c4d229b0460f467a7d69095c10e5eb1ed59d4fdb92432eb1463
+MISC metadata.xml 342 RMD160 ddf80db3f4299d93a7d725d1011f66c82226ca13 SHA1 b10a61cbca2c608ab8b73d43d982c21857133bdb SHA256 4d024224740d1d491d9ba577e6c1c66104ec5a91b09dea0e6f37fd647502321f
