@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-<herd>maintainer-wanted</herd>
+	<herd>maintainer-wanted</herd>
+	<use>
+		<flag name='lam'> Defines lam-mpi as default mpi 
+			implementation </flag>
+		<flag name='mpich'> Defines mpich as default mpi 
+			implementation </flag>
+	</use>
 </pkgmetadata>
